Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -422,8 +422,7 @@ nav dd, nav li li { font-size: 1em }
 nav dt + dd, nav li li:first-of-type
   { margin-top: 0 }
 details > dl, details > dd,
-details > ol li, details > ul li
-  {}
+details > ol li, details > ul li {}
 
 abbr { /* http://webtypography.net/3.2.2 */
   font-style: normal;
